# smart-amusement-park

./: .gitignore
IoTDevice/code-2.0/applications/chinasoftinc/wifi-iot/app/: BUILD.gn
IoTDevice/code-2.0/applications/chinasoftinc/wifi-iot/app/Alcohol/: BUILD.gn  Mix2111d.c  Mix2111d.h
IoTDevice/code-2.0/applications/chinasoftinc/wifi-iot/app/BMP280/: BUILD.gn  G28u8fttl.c  G28u8fttl.h  bmp280.c
IoTDevice/code-2.0/applications/chinasoftinc/wifi-iot/app/Bluetooth/: BUILD.gn  Bluetooth.c  Bluetooth_bak.c  adapter_for_serial_protol.c  local_log.c  serial_protocol.c
IoTDevice/code-2.0/applications/chinasoftinc/wifi-iot/app/Buzzer/: BUILD.gn  Beep.c  Beep.h
IoTDevice/code-2.0/applications/chinasoftinc/wifi-iot/app/CCS811/: BUILD.gn  CCS811-old.c  CCS811.c
IoTDevice/code-2.0/applications/chinasoftinc/wifi-iot/app/Gas/: BUILD.gn  Gas.c  aht20.c  aht20.h
IoTDevice/code-2.0/applications/sample/camera/cameraApp/: BUILD.gn
IoTDevice/code-2.0/applications/sample/camera/gallery/: BUILD.gn  config.json
IoTDevice/code-2.0/applications/sample/camera/launcher/: BUILD.gn
IoTDevice/code-2.0/applications/sample/camera/media/: BUILD.gn  camera_sample.cpp
IoTDevice/code-2.0/applications/sample/camera/setting/: BUILD.gn
IoTDevice/code-2.0/base/hiviewdfx/faultloggerd/services/: BUILD.gn  fault_logger_daemon.cpp  fault_logger_daemon.h  main.cpp
IoTDevice/code-2.0/base/hiviewdfx/hievent_lite/: BUILD.gn
IoTDevice/code-2.0/base/hiviewdfx/hievent_lite/command/: BUILD.gn
IoTDevice/code-2.0/base/hiviewdfx/hievent_lite/frameworks/: hiview_event.c  hiview_output_event.c  hiview_output_event.h
IoTDevice/code-2.0/base/security/deviceauth/hals/: BUILD.gn  deviceauth_hals.gni
IoTDevice/code-2.0/base/security/deviceauth/services/: BUILD.gn  device_auth.c  deviceauth.gni
IoTDevice/code-2.0/base/startup/appspawn_lite/services/: BUILD.gn
IoTDevice/code-2.0/base/startup/appspawn_standard/: BUILD.gn  OAT.xml  README_zh.md  appspawn.gni  appspawn.rc  ohos.build
IoTDevice/code-2.0/base/startup/appspawn_standard/include/: appspawn_msg_peer.h  appspawn_server.h  appspawn_socket.h  client_socket.h  server_socket.h
IoTDevice/code-2.0/base/startup/appspawn_standard/src/: appspawn_msg_peer.cpp  appspawn_server.cpp  main.cpp
IoTDevice/code-2.0/base/startup/appspawn_standard/test/: BUILD.gn
IoTDevice/code-2.0/base/startup/init_lite/initsync/: BUILD.gn
IoTDevice/code-2.0/base/startup/init_lite/services/: BUILD.gn
IoTDevice/code-2.0/base/startup/init_lite/services/src/: list.c  (+10 more)
IoTDevice/code-2.0/base/update/updater/services/: BUILD.gn  main.cpp  updater.cpp  updater_main.cpp  updater_main.h
IoTDevice/code-2.0/drivers/liteos/: BUILD.gn  README.md  README_zh.md
IoTDevice/code-2.0/drivers/liteos/hievent/: BUILD.gn
IoTDevice/code-2.0/drivers/liteos/hievent/include/: hiview_hievent.h
IoTDevice/code-2.0/drivers/liteos/hievent/src/: hievent_driver.c  hiview_hievent.c
IoTDevice/code-2.0/drivers/liteos/tzdriver/include/: tzdriver_compat.h
IoTDevice/code-2.0/drivers/liteos/tzdriver/src/: agent.c  cmdmonitor.c  gp_ops.c  mem.c  smc_smp.c  tc_client_driver.c  tc_client_sub_driver.c  teek_client_api.c  tz_spi_notify.c  tzdebug.c  tzdriver_compat.c
IoTDevice/code-2.0/foundation/ace/ace_engine/: BUILD.gn  OAT.xml  README.md  README_zh.md  ace_config.gni  ohos.build
IoTDevice/code-2.0/foundation/appexecfwk/standard/: BUILD.gn  README_zh.md  appexecfwk.gni  ohos.build
IoTDevice/code-2.0/foundation/appexecfwk/standard/common/: BUILD.gn
IoTDevice/code-2.0/foundation/appexecfwk/standard/kits/: BUILD.gn
IoTDevice/code-2.0/foundation/appexecfwk/standard/sa_profile/: 401.xml  501.xml  BUILD.gn  foundation.rc
IoTDevice/code-2.0/foundation/appexecfwk/standard/services/: BUILD.gn
IoTDevice/code-2.0/foundation/appexecfwk/standard/tools/: BUILD.gn
IoTDevice/code-2.0/foundation/distributedschedule/dmsfwk_lite/: BUILD.gn  README.md  README_zh.md
IoTDevice/code-2.0/foundation/distributedschedule/dmsfwk_lite/include/: dmslite.h  dmslite_devmgr.h  dmslite_famgr.h  dmslite_feature.h  dmslite_inner_common.h  dmslite_log.h  dmslite_msg_handler.h  dmslite_pack.h  dmslite_parser.h  dmslite_permission.h  dmslite_session.h  dmslite_tlv_common.h  dmslite_utils.h
IoTDevice/code-2.0/foundation/distributedschedule/dmsfwk_lite/source/: dmslite.c  dmslite_devmgr.c  dmslite_famgr.c  dmslite_feature.c  dmslite_msg_handler.c  dmslite_pack.c  dmslite_parser.c  dmslite_permission.c  dmslite_session.c  dmslite_tlv_common.c
IoTDevice/code-2.0/foundation/distributedschedule/safwk_lite/: BUILD.gn  README.md  README_zh.md
IoTDevice/code-2.0/foundation/distributedschedule/safwk_lite/src/: main.c
IoTDevice/code-2.0/foundation/graphic/standard/: BUILD.gn  README.md  README_zh.md  graphic.rc  ohos.build
IoTDevice/code-2.0/foundation/graphic/standard/utils/: BUILD.gn
IoTDevice/code-2.0/foundation/graphic/surface/: BUILD.gn  README.md  README_zh.md
IoTDevice/code-2.0/foundation/graphic/surface/frameworks/: buffer_client_producer.cpp  buffer_client_producer.h  buffer_manager.cpp  buffer_manager.h  buffer_queue.cpp  buffer_queue_consumer.cpp  buffer_queue_producer.cpp  buffer_queue_producer.h  surface.cpp  surface_buffer_impl.cpp  surface_impl.cpp
IoTDevice/code-2.0/foundation/graphic/surface/test/: BUILD.gn
IoTDevice/code-2.0/foundation/graphic/ui/: BUILD.gn  README.md  README_zh.md  ui.gni
IoTDevice/code-2.0/foundation/graphic/utils/: BUILD.gn  README.md  utils.gni
IoTDevice/code-2.0/foundation/graphic/utils/frameworks/: color.cpp  geometry2d.cpp  graphic_math.cpp  graphic_performance.cpp  mem_api.cpp  pixel_format_utils.cpp  queue.c  style.cpp  sys_info.cpp  transform.cpp  version.cpp
IoTDevice/code-2.0/foundation/graphic/utils/test/: BUILD.gn  color_unit_test.cpp  geometry2d_unit_test.cpp  graphic_math_unit_test.cpp  list_unit_test.cpp  rect_unit_test.cpp  style_unit_test.cpp  transform_unit_test.cpp  vector_unit_test.cpp
IoTDevice/code-2.0/foundation/graphic/wms/: BUILD.gn  README.md  README_zh.md
IoTDevice/code-2.0/foundation/graphic/wms/test/: BUILD.gn  sample_ui.cpp  sample_window.cpp
(+7760 files in other folders)
