# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

import("interfaces/innerkits/appexecfwk_base/appexecfwk_base_header.gni")
import("interfaces/innerkits/appexecfwk_core/appexecfwk_headers.gni")
import("interfaces/innerkits/libeventhandler/lib_event_handler_headers.gni")

# install to /system/framework
ohos_combine_jars("appexecfwk_install_java") {
  deps = [
    "common:appexecfwk_utils_java",
    "interfaces/innerkits/abilityshell_java:abilityshell_inner_java",
    "interfaces/innerkits/abilityshell_java:abilityshell_java",
    "interfaces/innerkits/appexecfwk_base_java:appexecfwk_base_java",
    "interfaces/innerkits/appexecfwk_java:appexecfwk_java",
    "interfaces/innerkits/appexecfwk_launcher_java:appexecfwk_launcher_java",
    "interfaces/innerkits/bundlemgr_adapter_java:bundlemgr_adapter_java",
    "interfaces/innerkits/bundlemgr_adapter_java:package_manager_adapter_java",
    "interfaces/innerkits/eventhandler_java:eventhandler_java",
    "interfaces/innerkits/handler_adapter_java:handler_adapter_java",
    "interfaces/innerkits/interwork_java:interwork_java",
    "interfaces/innerkits/pluginproxy_adapter_java:pluginproxy_adapter_java",
    "kits/appkit:appkit_java",
  ]

  if (!is_ivi_product) {
    deps += [ "interfaces/innerkits/appexecfwk_plugin:appexecfwk_plugin_java" ]
  }

  if (is_double_framework && !mrt) {
    subsystem_name = "appexecfwk"
    part_name = "appexecfwk_standard"
    dex_path = "${target_out_dir}/appexecfwk.z.jar"
  }
}
