# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

aafwk_path = "//foundation/aafwk/standard"
appexecfwk_path = "//foundation/appexecfwk/standard"
appspawn_path = "//base/startup/appspawn_standard"
even_path = "//base/notification/ces_standard"

libs_path = "${appexecfwk_path}/libs"
common_path = "${appexecfwk_path}/common"
services_path = "${appexecfwk_path}/services"
kits_path = "${appexecfwk_path}/kits"
innerkits_path = "${appexecfwk_path}/interfaces/innerkits"
tools_path = "${appexecfwk_path}/tools"
test_hap_common_path = "${appexecfwk_path}/test/common"
system_test_app_path =
    "${appexecfwk_path}/test/resource/amssystemtestability/abilitySrc"
