# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
  lite_library("dmslite") {
    target_type = "shared_library"

    cflags = [ "-Wall" ]
    cflags_cc = cflags

    defines = [
      "_GNU_SOURCE",
      "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER",
    ]

    sources = [
      "source/adapter/dms/dmslite_famgr.c",
      "source/adapter/softbus/dmslite_session.c",
      "source/dmslite.c",
      "source/dmslite_feature.c",
      "source/dmslite_msg_handler.c",
      "source/dmslite_pack.c",
      "source/dmslite_parser.c",
      "source/dmslite_permission.c",
      "source/dmslite_tlv_common.c",
    ]

    include_dirs = [
      "include",
      "interfaces/innerkits",
      "//foundation/distributedschedule/samgr_lite/interfaces/innerkits",
      "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
      "${aafwk_lite_path}/interfaces/innerkits/abilitymgr_lite",
      "//foundation/distributedschedule/samgr_lite/interfaces/kits/registry",
      "//foundation/communication/softbus_lite/interfaces/kits/transport",
      "//foundation/communication/softbus_lite/interfaces/kits/discovery",
      "${aafwk_lite_path}/interfaces/kits/ability_lite",
      "${aafwk_lite_path}/interfaces/kits/want_lite",
      "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
      "${appexecfwk_lite_path}/interfaces/innerkits/bundlemgr_lite",
      "//foundation/communication/softbus_lite_new/interfaces/kits/bus_center",
      "//foundation/communication/softbus_lite_new/interfaces/kits/common",
      "//kernel/liteos_a/kernel/include",
      "//kernel/liteos_a/kernel/common",
      "//third_party/bounds_checking_function/include",
      "//third_party/cJSON",
      "//utils/native/lite/include",
    ]

    deps = []

    public_deps = [
      "${aafwk_lite_path}/frameworks/abilitymgr_lite:aafwk_abilityManager_lite",
      "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
      "//base/security/huks/frameworks/huks_lite/source:huks",
      "//foundation/communication/softbus_lite:softbus",
      "//foundation/distributedschedule/samgr_lite/samgr:samgr",
      "//third_party/bounds_checking_function:libsec_shared",
    ]
  }

  lite_component("dtbschedmgr") {
    features = [ ":dmslite" ]
  }

  generate_notice_file("dtbschedmgr_notice_file") {
    module_name = "dtbschedmgr"
    module_source_dir_list = [
      "//third_party/bounds_checking_function",
      "//third_party/cJSON",
    ]
  }
}
