# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/ndk/ndk.gni")

lite_component("lite_surface") {
  features = [ ":surface" ]
  public_deps = features
}

ndk_lib("lite_surface_ndk") {
  lib_extension = ".so"
  deps = [ ":surface" ]
  head_files = [ "interfaces/kits" ]
}

shared_library("surface") {
  sources = [
    "frameworks/buffer_client_producer.cpp",
    "frameworks/buffer_manager.cpp",
    "frameworks/buffer_queue.cpp",
    "frameworks/buffer_queue_consumer.cpp",
    "frameworks/buffer_queue_producer.cpp",
    "frameworks/surface.cpp",
    "frameworks/surface_buffer_impl.cpp",
    "frameworks/surface_impl.cpp",
  ]
  include_dirs = [
    "frameworks",
    "//drivers/peripheral/display/interfaces_lite/include",
  ]
  public_configs = [ ":surface_public_config" ]
  public_deps = [ "//foundation/graphic/utils:lite_graphic_utils" ]
  deps = [
    "//drivers/peripheral/display/hal:hdi_display",
    "//foundation/communication/ipc_lite:liteipc_adapter",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
  ldflags = [
    "-ldisplay_gfx",
    "-ldisplay_gralloc",
    "-ldisplay_layer",
  ]
  cflags = [ "-fPIC" ]
  cflags += [ "-Wall" ]
  cflags_cc = cflags
}

config("surface_public_config") {
  include_dirs = [
    "interfaces/innerkits",
    "interfaces/kits",
    "//foundation/graphic/utils/interfaces/kits",
  ]
}
