# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

GRAPHIC_UTILS_PATH = "//foundation/graphic/utils"

graphic_utils_include_dirs = [
  "$GRAPHIC_UTILS_PATH/interfaces/innerkits",
  "$GRAPHIC_UTILS_PATH/interfaces/kits",
]

graphic_utils_sources = [
  "$GRAPHIC_UTILS_PATH/frameworks/color.cpp",
  "$GRAPHIC_UTILS_PATH/frameworks/geometry2d.cpp",
  "$GRAPHIC_UTILS_PATH/frameworks/graphic_math.cpp",
  "$GRAPHIC_UTILS_PATH/frameworks/graphic_performance.cpp",
  "$GRAPHIC_UTILS_PATH/frameworks/hal_cpu.cpp",
  "$GRAPHIC_UTILS_PATH/frameworks/hal_tick.cpp",
  "$GRAPHIC_UTILS_PATH/frameworks/mem_api.cpp",
  "$GRAPHIC_UTILS_PATH/frameworks/pixel_format_utils.cpp",
  "$GRAPHIC_UTILS_PATH/frameworks/style.cpp",
  "$GRAPHIC_UTILS_PATH/frameworks/transform.cpp",
  "$GRAPHIC_UTILS_PATH/frameworks/version.cpp",
]

graphic_hals_include_dirs = [
  "$GRAPHIC_UTILS_PATH/interfaces/innerkits",
  "//drivers/peripheral/display/interfaces_lite/include",	
]

graphic_hals_sources = [
  "$GRAPHIC_UTILS_PATH/frameworks/hals/gfx_engines.cpp",
  "$GRAPHIC_UTILS_PATH/frameworks/hals/hi_fbdev.cpp",
]
