# Copyright (c) 2021 Chinasoft International Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/applications/config.gni")

lite_component("app") {
    features = []
    if (enable_PIR_mqtt_server == true) {
        features += [ "PIR_mqtt_server" ]
    }
    if (enable_FirstApp == true) {
        features += [ "my_first_app" ]
    }
    if (enable_traffic_light == true) {
        features += [ "traffic_light" ]
    }
    if (enable_oled == true) {
        features += [ "oled" ]
    }
    if (enable_nfc == true) {
        features += [ "nfc" ]
    }
    if (enable_max30102 == true) {
        features += [ "MAX30102" ]
    }
    if (enable_BMP280 == true) {
        features += [ "BMP280" ]
    }
    if (enable_TCS230 == true) {
        features += [ "TCS230" ]
    }
    if (enable_TP_401PW == true) {
        features += [ "TP_401PW" ]
    }
    if (enable_CCS811 == true) {
        features += [ "CCS811" ]
    }
    if (enable_fire == true) {
        features += [ "fire" ]
    }
    if (enable_Bluetooth == true) {
        features += [ "Bluetooth" ]
    }
    if (enable_Soil == true) {
        features += [ "Soil" ]
    }
    if (enable_SHT40 == true) {
        features += [ "sht40" ]
    }
    if (enable_IR_MeasureTemp == true) {
        features += [ "IR_MeasureTemp" ]
    }
    if(enable_Alcohol == true) {
        features += [ "Alcohol" ]
    }
    if(enable_Buzzer == true) {
        features += [ "Buzzer" ]
    }
    if(enable_Key == true) {
        features += [ "Key" ]
    }
    if(enable_Led == true) {
        features += [ "Led" ]
    }
    if(enable_Adc == true) {
        features += [ "Adc" ]
    }
    if(enable_PIR == true) {
        features += [ "PIR" ]
    }
    if(enable_Gas == true) {
        features += [ "Gas" ]
    }

}
